--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ nftFactory_vishnu",
+    "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ --network sepolia nftFactory_vishnu",
     "create-local": "graph create --node http://localhost:8020/ nftFactory_vishnu",
     "remove-local": "graph remove --node http://localhost:8020/ nftFactory_vishnu",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 nftFactory_vishnu",
